# pixel-probe

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
docs/adr/: 0001-extractor-vs-analyzer-split.md  0002-hand-rolled-iptc-parser.md  0003-hybrid-result-shape.md  0004-constructor-di-over-plugins.md  0005-sequential-extraction.md  0006-custom-exception-hierarchy.md  0007-adversarial-input-handling.md  0008-exif-parsing-strategy.md  0009-iptc-parser-design.md  0010-xmp-parser-design.md  0011-failure-handling-normalization.md  0012-reduced-exception-hierarchy.md  0013-gui-architecture.md  README.md
scripts/: build_fixtures.py
src/pixel_probe/: __init__.py  cli.py  exceptions.py
src/pixel_probe/core/: __init__.py  analyzer.py
src/pixel_probe/core/analyzers/: __init__.py
src/pixel_probe/core/extractors/: __init__.py  _signatures.py  base.py  exif.py  file_info.py  iptc.py  xmp.py
src/pixel_probe/gui/: __init__.py
src/pixel_probe/gui/widgets/: __init__.py  metadata_tree.py
src/pixel_probe/gui/workers/: __init__.py  analysis_worker.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_exceptions.py  test_exif.py  test_file_info.py  test_iptc.py  test_smoke.py  test_xmp.py
tests/fixtures/: README.md
tests/gui/: test_analysis_worker.py  test_metadata_tree_model.py
tests/property/: test_exif_normalize.py  test_iptc_walkers.py
